--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,8 @@
 
     <string name="toast_stock_added_no_connectivity">Symbol <xliff:g id="symbol" example="GOOG">%1$s</xliff:g> added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
-    <string name="toast_no_stock">Symbol <xliff:g id="symbol" example="GOOG">%1$s</xliff:g> does not exist.</string>
+    <string name="toast_no_stock">Stock <xliff:g id="symbol" example="GOOG">%1$s</xliff:g> does not exist.</string>
+    <string name="toast_incorrect_stock">Stock symbol is incorrect.</string>
 
     <string name="chart_description"><xliff:g id="symbol" example="GOOG">%1$s</xliff:g> rates</string>
 
